Create custom storybook theme

--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -2,4 +2,14 @@
 	.sbdocs-wrapper {
 		padding: 2rem 2.5rem;
 	}
+	.sbdocs {
+		color: black;
+	}
+	.os-content {
+		background-color: #fafcfe;
+		color: black;
+	}
+	.css-1p8ieni code {
+		background-color: #fafcfe;
+	}
 </style>
