Update custom theme.

--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -6,10 +6,11 @@
 		color: black;
 	}
 	.os-content {
-		background-color: #fafcfe;
+		background-color: #f6f7f7;
 		color: black;
 	}
 	.css-1p8ieni code {
-		background-color: #fafcfe;
+		background-color: #f6f7f7;
+		color: black;
 	}
 </style>
